<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.gwenn</groupId>
  <artifactId>sqlite-jna</artifactId>
  <packaging>jar</packaging>
  <version>0.2.0</version>
  <name>SQLite JNA binding</name>
  <description>JDBC Driver for SQLite using JNA</description>
  <url>https://github.com/gwenn/sqlite-jna</url>

  <licenses>
    <license>
      <name>Public domain</name>
      <url>http://unlicense.org/</url>
      <distribution>manual</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/gwenn/sqlite-jna/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:https://github.com/gwenn/sqlite-jna.git</connection>
    <developerConnection>scm:git:git@github.com:gwenn/sqlite-jna.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/gwenn/sqlite-jna</url>
  </scm>

  <ciManagement>
    <system>github</system>
    <url>https://github.com/gwenn/sqlite-jna/actions</url>
  </ciManagement>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- 4.0 (Java 6), 4.1 (Java 7), 4.2 (Java 8) -->
    <jdbc.specification.version>4.2</jdbc.specification.version>
    <!-- JDBC 4.2 + SQLite 3.37.0 -->
    <large.update>false</large.update>
    <sqlite.enable.column.metadata>true</sqlite.enable.column.metadata>
    <sqlite.omit.load.extension>false</sqlite.omit.load.extension>
    <sqlite.enable.stmt.scanstatus>false</sqlite.enable.stmt.scanstatus>
    <sqlite.enable.unlock.notify>false</sqlite.enable.unlock.notify>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.12.1</version>
    </dependency>
    <dependency>
      <groupId>com.github.gwenn</groupId>
      <artifactId>sqlite-parser</artifactId>
      <version>0.1.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <!-- Prevent JavaDoc warnings from failing the build under Java 8... -->
      <id>doclint-java8-disable</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <doclint>none</doclint>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- https://central.sonatype.org/pages/apache-maven.html#distribution-management-and-authentication -->
      <id>ossrh</id>

      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>

      <distributionManagement>
        <snapshotRepository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.0.0-M1</version>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>windows</id>

      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>

      <properties>
        <sqlite.enable.column.metadata>false</sqlite.enable.column.metadata>
      </properties>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>com.igormaznitsa</groupId>
        <artifactId>jcp</artifactId>
        <version>7.0.4</version>
        <configuration>
          <verbose>false</verbose>
        </configuration>
        <executions>
          <execution>
            <id>preprocess-sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>preprocess</goal>
            </goals>
          </execution>
          <execution>
            <id>preprocess-test-sources</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>preprocess</goal>
            </goals>
            <configuration>
              <useTestSources>true</useTestSources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M4</version>
        <configuration>
          <enableAssertions>true</enableAssertions>
          <disableXmlReport>true</disableXmlReport>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <trimStackTrace>true</trimStackTrace>
          <!--argLine>-Djna.library.path=/usr/local/opt/sqlite/lib</argLine-->
          <!--argLine>-Xcheck:jni</argLine-->
        </configuration>
      </plugin>
      <!--  mvn package shade:shade -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.3</version>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.0.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
    </plugins>
  </reporting>

  <developers>
    <developer>
      <id>gwenn</id>
      <url>https://github.com/gwenn</url>
      <roles>
        <role>owner</role>
      </roles>
    </developer>
  </developers>
</project>
